QuestionUbi: alignment fix

--- a/src/components/QuestionUbi/CreateQuestion/style.module.less
+++ b/src/components/QuestionUbi/CreateQuestion/style.module.less
@@ -102,6 +102,7 @@
 
 .submitButton {
   visibility: hidden;
+  margin-top: 1rem;
 }
 
 .submitButtonDirty {
